CSS and Github Redirects added
CSS and Github Redirects added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="index.css">
+</head>
 <body>
 <h1>Subh-Projects</h1>
 <p>Repository of a Code Artist</p>
+
+<br><br>
+	<div align='center'>
+		<a href='https://github.com/s7chak/soccerhours_phase2_flask'>Soccer Hours</a> - Pick up soccer booking website in Flask and Python:  http://footyhours.appspot.com/
+		<br><br>
+		<a href='https://github.com/s7chak/soccerhours_phase3_app'>Soccer Hours</a> - Pick up soccer booking app in Kotlin:  http://footyhours.appspot.com/info
+		<br><br>
+
+		<a href='https://github.com/s7chak/4DByD'>4DByD</a> - For Developers by Developers - Smart Debugging Console for error logs
+		<br><br>
+	</div>
 </body>
 </html>
