--- a/books.html
+++ b/books.html
@@ -1,10 +1,104 @@
 <html>
-<h2>
-https://www.goodreads.com/book/show/16280863-intellectuals-and-race
-https://www.goodreads.com/book/show/1058052.The_Metamorphosis
-https://www.goodreads.com/book/show/4950018-what-matters-most
-https://www.goodreads.com/book/show/34536488-principles
-https://www.goodreads.com/book/show/4950018-what-matters-most
-https://www.goodreads.com/book/show/170448.Animal_Farm
+<a href=<h2>
+	<a href='https://www.goodreads.com/book/show/43701061-the-guardians?from_search=true&qid=u6VvC1grXX&rank=1'>1</a>
+<a href='https://www.goodreads.com/book/show/36809135-where-the-crawdads-sing?ac=1&from_search=true&qid=9U0W4Gn7Xq&rank=1'>2</a>
+<a href='https://www.goodreads.com/book/show/43884993-the-19th-christmas?ac=1&from_search=true&qid=jfnqFS9FyY&rank=1'>3</a>
+<a href='https://www.goodreads.com/book/show/43982054-the-water-dancer?from_search=true&qid=20zeD2vTJw&rank=1'>4</a>
+<a href='https://www.goodreads.com/book/show/43798285-the-institute?ac=1&from_search=true&qid=Ptmh09iA61&rank=1'>5</a>
+<a href='https://www.goodreads.com/book/show/42975172-the-testaments?ac=1&from_search=true&qid=87VuaaKoZp&rank=2'>6</a>
+<a href='https://www.goodreads.com/book/show/43885041-the-night-fire?ac=1&from_search=true&qid=9Nx1jwz9oP&rank=2'>7</a>
+<a href='https://www.goodreads.com/book/show/43662365-blue-moon?from_search=true&qid=02f1MOBgay&rank=13'>8</a>
+<a href='https://www.goodreads.com/book/show/39863515-an-anonymous-girl?ac=1&from_search=true&qid=MSitrdj9af&rank=1'>9</a>
+<a href='https://www.goodreads.com/book/show/40097951-the-silent-patient?from_search=true&qid=VHYHWBF4Yq&rank=1'>10</a>
+<a href='https://www.goodreads.com/book/show/41064227-redemption'>11</a>
+<a href='https://www.goodreads.com/book/show/42283286-summer-of-69?ac=1&from_search=true&qid=f8zu0flHYp&rank=1'>12</a>
+<a href='https://www.goodreads.com/book/show/42791437-the-new-girl?ac=1&from_search=true&qid=qJxFqkDYJG&rank=4'>13</a>
+<a href='https://www.goodreads.com/book/show/43886034-one-good-deed?from_search=true&qid=p2iiY6BU6M&rank=1'>14</a>
+<a href='https://www.goodreads.com/book/show/44034500-a-better-man?ac=1&from_search=true&qid=x5zosaljsY&rank=3'>15</a>
+<a href='https://www.goodreads.com/book/show/44906255-twisted-twenty-six?ac=1&from_search=true&qid=8UAVZQfY9l&rank=1'>16</a>
+<a href='https://www.goodreads.com/book/show/38232379-kingdom-of-the-blind?ac=1&from_search=true&qid=eR5LEkm1In&rank=1'>17</a>
+<a href='https://www.goodreads.com/book/show/40389527-the-woman-in-the-window?ac=1&from_search=true&qid=GugN5cgVem&rank=1'>18</a>
+<a href='https://www.goodreads.com/book/show/35466342-dark-in-death?ac=1&from_search=true&qid=j1eDc7BsvH&rank=1'>19</a>
+<a href='https://www.goodreads.com/book/show/34912895-the-great-alone?ac=1&from_search=true&qid=e4by6DlTOZ&rank=1'>20</a>
+<a href='https://www.goodreads.com/book/show/35493082-the-rising-sea?ac=1&from_search=true&qid=rj2fgB3c1h&rank=2'>21</a>
+<a href='https://www.goodreads.com/book/show/35518466-accidental-heroes?ac=1&from_search=true&qid=Xzp4jEr6f7&rank=1'>22</a>
+<a href='https://www.goodreads.com/book/show/35534628-the-disappeared?from_search=true&qid=nt8lo0nSlu&rank=8'>23</a>
+<a href='https://www.goodreads.com/book/show/35297310-i-ve-got-my-eyes-on-you?ac=1&from_search=true&qid=8obrFOYLQn&rank=1'>24</a>
+<a href='https://www.goodreads.com/book/show/35959740-circe?ac=1&from_search=true&qid=N1h4nbZ1ss&rank=1'>25</a>
+<a href='https://www.goodreads.com/book/show/35959808-the-fallen?ac=1&from_search=true&qid=3SYJYyHsPs&rank=4'>26</a>
+<a href='https://www.goodreads.com/book/show/36140457-twisted-prey?ac=1&from_search=true&qid=b2JGJsRxOf&rank=1'>27</a>
+<a href='https://www.goodreads.com/book/show/35212978-the-17th-suspect?ac=1&from_search=true&qid=7iNbli9oMx&rank=1'>28</a>
+<a href='https://www.goodreads.com/book/show/36106797-the-cast?ac=1&from_search=true&qid=YiqxQvYTt5&rank=1'>29</a>
+<a href='https://www.goodreads.com/book/show/36124936-the-outsider?from_search=true&qid=fyuw8R3edP&rank=6'>30</a>
+<a href='https://www.goodreads.com/book/show/35097255-the-president-is-missing?ac=1&from_search=true&qid=K6QTIvXu6I&rank=1'>31</a>
+<a href='https://www.goodreads.com/book/show/36421604-the-other-woman?from_search=true&qid=eyRkNkgxjx&rank=11'>32</a>
+<a href='https://www.goodreads.com/book/show/36385830-thrawn?ac=1&from_search=true&qid=EqtyZi4GA3&rank=1'>33</a>
+<a href='https://www.goodreads.com/book/show/37277042-tailspin?ac=1&from_search=true&qid=QN9ARhrPFn&rank=1'>34</a>
+<a href='https://www.goodreads.com/book/show/36645967-texas-ranger?ac=1&from_search=true&qid=ACvAD4oS8Y&rank=1'>35</a>
+<a href='https://www.goodreads.com/book/show/39798828-the-fall-of-gondolin?ac=1&from_search=true&qid=1PsBzMnkCf&rank=1'>36</a>
+<a href='https://www.goodreads.com/book/show/37638161-leverage-in-death?ac=1&from_search=true&qid=jCCy81RkhA&rank=1'>37</a>
+<a href='https://www.goodreads.com/book/show/41090677-juror-3?ac=1&from_search=true&qid=WUxUe7gmnP&rank=2'>38</a>
+<a href='https://www.goodreads.com/book/show/42283287-lethal-white?ac=1&from_search=true&qid=rjge7asbgP&rank=1'>39</a>
+<a href='https://www.goodreads.com/book/show/24233708-an-absolutely-remarkable-thing?ac=1&from_search=true&qid=8KSkw90DEs&rank=1'>40</a>
+<a href='https://www.goodreads.com/book/show/39072210-a-spark-of-light?ac=1&from_search=true&qid=pH2vnn8jPb&rank=1'>41</a>
+<a href='https://www.goodreads.com/book/show/38718233-the-next-person-you-meet-in-heaven?ac=1&from_search=true&qid=gXX7oEdQLz&rank=1'>42</a>
+<a href='https://www.goodreads.com/book/show/38212843-every-breath?ac=1&from_search=true&qid=1YV8gb7Apa&rank=1'>43</a>
+<a href='https://www.goodreads.com/book/show/38389488-the-reckoning?ac=1&from_search=true&qid=kmDg2frUD4&rank=1'>44</a>
+<a href='https://www.goodreads.com/book/show/38355410-elevation?ac=1&from_search=true&qid=CnsX1HkcDQ&rank=1'>45</a>
+<a href='https://www.goodreads.com/book/show/34019122-past-tense?ac=1&from_search=true&qid=qn5Nos2teg&rank=3'>46</a>
+<a href='https://www.goodreads.com/book/show/38325516-look-alive-twenty-five?ac=1&from_search=true&qid=kbr7dmDksS&rank=1'>47</a>
+<a href='https://www.goodreads.com/book/show/39943621-fire-blood?from_search=true&qid=vSEnGj0iON&rank=9'>48</a>
+<a href='https://www.goodreads.com/book/show/34002132-oathbringer?ac=1&from_search=true&qid=1KlejrROJm&rank=1'>49</a>
+<a href='https://www.goodreads.com/book/show/34522506-the-people-vs-alex-cross?ac=1&from_search=true&qid=3C23TirURf&rank=1'>50</a>
+<a href='https://www.goodreads.com/book/show/41939872-the-threat?from_search=true&qid=YVZSEMHonY&rank=6'>51</a>
+<a href='https://www.goodreads.com/book/show/42649659-the-right-side-of-history?ac=1&from_search=true&qid=a1SJo87EHF&rank=1'>52</a>
+<a href='https://www.goodreads.com/book/show/43885930-life-will-be-the-death-of-me?ac=1&from_search=true&qid=KceJ3I5ThM&rank=1'>53</a>
+<a href='https://www.goodreads.com/book/show/40642458-the-second-mountain?ac=1&from_search=true&qid=5VG2FC4rs1&rank=1'>54</a>
+<a href='https://www.goodreads.com/book/show/42201377-the-pioneers?from_search=true&qid=wbR02U6qst&rank=7'>55</a>
+<a href='https://www.goodreads.com/book/show/44414972-howard-stern-comes-again?ac=1&from_search=true&qid=00Do9ydrVG&rank=1'>56</a>
+<a href='https://www.goodreads.com/book/show/44595959-unfreedom-of-the-press?ac=1&from_search=true&qid=QNQVZ01g1e&rank=1'>57</a>
+<a href='https://www.goodreads.com/book/show/35133922-educated?ac=1&from_search=true&qid=QbrD53WBj1&rank=1'>58</a>
+<a href='https://www.goodreads.com/book/show/46037714-call-sign-chaos?ac=1&from_search=true&qid=Bq7q6T260t&rank=1'>59</a>
+<a href='https://www.goodreads.com/book/show/43848929-talking-to-strangers?ac=1&from_search=true&qid=FVVX0kWi7M&rank=4'>60</a>
+<a href='https://www.goodreads.com/book/show/45167624-inside-out?ac=1&from_search=true&qid=ZCNjoHWw4m&rank=1'>61</a>
+<a href='https://www.goodreads.com/book/show/45897523-blowout?from_search=true&qid=yvbHMuY6xL&rank=10'>62</a>
+<a href='https://www.goodreads.com/book/show/44303730-me?ac=1&from_search=true&qid=bhqq1PjQNU&rank=2'>63</a>
+<a href='https://www.goodreads.com/book/show/45201472-the-beautiful-ones?ac=1&from_search=true&qid=pBr3HFHPVG&rank=3'>64</a>
+<a href='https://www.goodreads.com/en/book/show/46260072'>65</a>
+<a href='https://www.goodreads.com/book/show/34237826-grant?ac=1&from_search=true&qid=nlkhBMCsl6&rank=1'>66</a>
+<a href='https://www.goodreads.com/book/show/36595101-fire-and-fury?ac=1&from_search=true&qid=1OUvJOjSx8&rank=1'>67</a>
+<a href='https://www.goodreads.com/book/show/36222733-russian-roulette'>68</a>
+<a href='https://www.goodreads.com/book/show/36262849-dear-madam-president?ac=1&from_search=true&qid=NwPpeVEfhZ&rank=1'>69</a>
+<a href='https://www.goodreads.com/book/show/35230469-fascism?ac=1&from_search=true&qid=dFYkObqm9m&rank=2'>70</a>
+<a href='https://www.goodreads.com/book/show/35108805-a-higher-loyalty?ac=1&from_search=true&qid=eEdbaDZqYo&rank=1'>71</a>
+<a href='https://www.goodreads.com/book/show/38385947-the-soul-of-america?ac=1&from_search=true&qid=oalhQ0Rgqn&rank=1'>72</a>
+<a href='https://www.goodreads.com/book/show/36613747-how-to-change-your-mind?ac=1&from_search=true&qid=mkGrbHTpd3&rank=3'>73</a>
+<a href='https://www.goodreads.com/book/show/36254351-the-restless-wave?ac=1&from_search=true&qid=XRxvC2QHVa&rank=2'>74</a>
+<a href='https://www.goodreads.com/book/show/38348476-calypso?ac=1&from_search=true&qid=lW3yb6aGLR&rank=1'>75</a>
+<a href='https://www.goodreads.com/book/show/36342140-yes-we-still-can?ac=1&from_search=true&qid=yBZGKV8bhR&rank=1'>76</a>
+<a href='https://www.goodreads.com/book/show/36342165-liars-leakers-and-liberals?ac=1&from_search=true&qid=3oLfTOXh9I&rank=1'>77</a>
+<a href='https://www.goodreads.com/book/show/38633557-the-russia-hoax?ac=1&from_search=true&qid=wAaLrfpAma&rank=1'>78</a>
+<a href='https://www.goodreads.com/book/show/40226205-unhinged'>79</a>
+<a href='https://www.goodreads.com/book/show/38820046-21-lessons-for-the-21st-century?ac=1&from_search=true&qid=0vjauuTw8F&rank=1'>80</a>
+<a href='https://www.goodreads.com/book/show/41012533-fear?from_search=true&qid=qw2e4cYg84&rank=10'>81</a>
+<a href='https://www.goodreads.com/en/book/show/35182973'>82</a>
+<a href='https://www.goodreads.com/book/show/38714362-killing-the-ss?ac=1&from_search=true&qid=ybaM9MDc9g&rank=1'>83</a>
+<a href='https://www.goodreads.com/en/book/show/40201496'>84</a>
+<a href='https://www.goodreads.com/book/show/38799788-beastie-boys-book?ac=1&from_search=true&qid=WmzOyX5pgI&rank=2'>85</a>
+<a href='https://www.goodreads.com/book/show/38746485-becoming?ac=1&from_search=true&qid=QACSMddZpb&rank=1'>86</a>
+<a href='https://www.goodreads.com/book/show/26025989-the-princess-diarist?ac=1&from_search=true&qid=GOW2Y1t2FH&rank=1'>87</a>
+<a href='https://www.goodreads.com/book/show/31947326-portraits-of-courage?ac=1&from_search=true&qid=zw9ueEdH1c&rank=1'>88</a>
+<a href='https://www.goodreads.com/book/show/33296611-trump-s-war?ac=1&from_search=true&qid=lkiaKSfWxT&rank=1'>89</a>
+<a href='https://www.goodreads.com/book/show/33931330-old-school?from_search=true&qid=oLxrYozJ1i&rank=11'>90</a>
+<a href='https://www.goodreads.com/book/show/34196619-this-fight-is-our-fight?ac=1&from_search=true&qid=YKrVZafIHX&rank=1'>91</a>
+<a href='https://www.goodreads.com/book/show/32938155-option-b?ac=1&from_search=true&qid=BUJmKb1yEY&rank=1'>92</a>
+<a href='https://www.goodreads.com/book/show/32191710-astrophysics-for-people-in-a-hurry?ac=1&from_search=true&qid=HRDf2MKOvx&rank=1'>93</a>
+<a href='https://www.goodreads.com/book/show/31933250-al-franken-giant-of-the-senate?ac=1&from_search=true&qid=wuzSp5mPBG&rank=2'>94</a>
+<a href='https://www.goodreads.com/book/show/33347428-i-can-t-make-this-up?ac=1&from_search=true&qid=2G7GvOW1xB&rank=1'>95</a>
+<a href='https://www.goodreads.com/book/show/33641806-understanding-trump?ac=1&from_search=true&qid=Rrptw32Cgt&rank=1'>96</a>
+<a href='https://www.goodreads.com/book/show/34605923-rediscovering-americanism?ac=1&from_search=true&qid=y0UL1HjFaW&rank=1'>97</a>
+<a href='https://www.goodreads.com/book/show/35276688-devil-s-bargain?from_search=true&qid=HtMoYyd2NG&rank=20'>98</a>
+<a href='https://www.goodreads.com/book/show/34114362-what-happened?ac=1&from_search=true&qid=4XaaR10Vgo&rank=1'>99</a>
+<a href='https://www.goodreads.com/book/show/34593560-killing-england?ac=1&from_search=true&qid=lnl3TZTcp8&rank=2'>100</a>
 </h2>
 </html>
