create github pages

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content10 cid-rC4YuJiXrZ" id="content10-b">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section article content10 cid-rC4YuJiXrZ" id="content10-b">
     
      
 
