--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   
 </head>
 <body>
-  <section class="header12 cid-rQVMPLH01N mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/S3La-3bUjXk?rel=0&amp;showinfo=0&amp;autoplay=0&amp;loop=1" id="header12-n">
+  <section class="header12 cid-rQVMPLH01N mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=S3La-3bUjXk" id="header12-n">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(39, 33, 73);">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(20, 15, 49);">
     </div>
 
     <div class="container  ">
@@ -87,7 +87,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/g">build a site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
