--- a/about.html
+++ b/about.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html  >
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146814301-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-146814301-3');
-</script>
   <!-- Site made with Mobirise Website Builder v4.11.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content10 cid-rC4YuJiXrZ" id="content10-b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content10 cid-rC4YuJiXrZ" id="content10-b">
     
      
 
@@ -86,7 +78,6 @@
                                 About Me:</a></h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7"><strong><a href="about.html" class="text-white">What I do? Where I come from? </a><br><a href="about.html" class="text-white">Where I want to go?</a></strong></p>
                         </div>
-                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="subhayuchakravarty"><a class="LI-simple-link" href='https://www.linkedin.com/in/subhayuchakravarty?trk=profile-badge'>Find more on LinkedIn</a></div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="b b-phone">
