--- a/page5.html
+++ b/page5.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146814301-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-146814301-3');
-</script>
   <!-- Site made with Mobirise Website Builder v4.11.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -70,7 +61,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section info3 cid-rQUKq8das4 mbr-parallax-background" id="info3-b">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section info3 cid-rQUKq8das4 mbr-parallax-background" id="info3-b">
 
     
 
