--- a/ml.html
+++ b/ml.html
@@ -86,7 +86,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header9 cid-rQUM5C96ER mbr-fullscreen mbr-parallax-background" id="header9-l">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header9 cid-rQUM5C96ER mbr-fullscreen mbr-parallax-background" id="header9-l">
 
     
 
@@ -100,7 +100,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-4"><strong>
                 Pre-trained image classifier deployed on Google Cloud</strong></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5"><br>An image classification website that will tell you if the image you have uploaded is a firearm, knife or a bomb.<br>Pretrained resnet34 from FastAI used to build classifier by training on custom dataset of three classes.<br>The dataset was built from scratch using Google Images and using a JavaScript command that downloaded the URLs into a CSV.<br>FastAI's download functionality was used to create labeled Image Data Bunch which trained the resnet34 for the three classes mentioned.</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://object-threat-vision.appspot.com">Live Site</a>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://object-threat-vision.appspot.com" target="_blank">Live Site</a>
                 <a class="btn btn-md btn-black display-4" href="https://github.com/s7chak/vision-api-app">GitHub</a></div>
         </div>
     </div>
@@ -144,7 +144,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     Sourcing data from the US Department of Agriculture, we had wildfire data for the 23 years from 1992-2015.<br>After initial analyses regarding states, frequency, categories of causes and extracting visualizations, we as a team of five decided to predict the following:<br>1. <strong>Cause of WIldfires</strong> given the features that could be known beforehand<br>2. <strong>Probable Wildfire locations</strong> and matching with reality<br>3. <strong>Predicting Fire Size</strong>, given the geographical and deiscovery features<br><br>Next, we analyzed the features importances, to understand better which features are needed to predict the above results accurately and speculated as to the additional features might help. &nbsp;To know more, have a look at the Medium blog we wrote.<br><br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://medium.com/@vrinda.sharma/us-wildfires-hell-on-earth-6602e709f43d" target="_blank">
-                        Blog</a> <a class="btn btn-md btn-black display-4" href="https://mobirise.co">
+                        Blog</a> <a class="btn btn-md btn-black display-4" href="https://github.com/prajvalgupta/bds-project/tree/master/Subhayu%20Codes" target="_blank">
                         GitHub<br></a></div>
             </div>
         </div>
@@ -167,7 +167,7 @@
             <p class="mbr-text pb-3 mbr-fonts-style display-5">
                What if an autonomous car sees a person where there is a Green light?Understanding Object recognition and how they can be attacked adversarially while training, we as a team of six decided to perform this attack one very crucial use case of object recognition and detection - Autonomous vehicles.<br><br>We used Faster R-CNN for the Object recognition model, which is trained on the Microsoft COCO dataset.<br>For the adversarial image we created masks of a walking-man green light symbol and modified the abckground of the image to create perturbations to fool the Neural network.<br>The perturbations were improved iteratively and by applying gradient descent, till the perturbations seemed unnoticeable to the human eye, but were present significantly enough to fool the algorithm.</p>
             <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">Blog</a>
-                <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">GitHub</a></div>
+                <a class="btn btn-md btn-white-outline display-4" href="https://github.com/s7chak/Cognitive_Project" target="_blank">GitHub</a></div>
         </div>
     </div>
 
