--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   
-  <section class="header12 cid-rQVMPLH01N mbr-fullscreen" id="header12-n">
+  <section class="header12 cid-tEhlDDVn12 mbr-fullscreen" id="header12-z">
 
     
 
@@ -47,14 +47,14 @@
     <div class="container  ">
             <div class="media-container">
                 <div class="col-md-12 align-center">
-                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><div><br></div><br><div>Code Canvas</div></h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-7">Subhayu Chakravarty<br><br><br>A repository of side projects, their source code,&nbsp;how it works, how they were built <br>and the story behind them.</p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-white-outline display-4" href="se.html"><span class="mbrib-responsive mbr-iconfont mbr-iconfont-btn"></span>Software Engineering</a> <a class="btn btn-md btn-white-outline display-4" href="ml.html"><span class="mbrib-android mbr-iconfont mbr-iconfont-btn"></span>Machine Learning</a></div>
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><br><br><br>Code Canvas</h1>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-7">Subhayu Chakravarty<br><br><br>A repository of side projects, their source code, how it works, how they were built<br>and the story behind them.</p>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-white-outline display-4" href="se.html"><span class="mbrib-responsive mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>Software Engineering</a>   <a class="btn btn-md btn-white-outline display-4" href="ml.html"><span class="mbrib-android mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>Machine Learning</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                            <a href="assets/files/Resume_Subhayu_Chakravarty_0120.pdf">
+                            <a href="assets/files/Resume_Subhayu_Chakravarty_02-21.pdf">
                                 <span class="mbr-iconfont mbrib-download" style="font-size: 55px;"></span>
                             </a>
                             </div>
@@ -64,7 +64,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://www.linkedin.com/in/subhayuchakravarty/">
+                                <a href="https://www.linkedin.com/in/subhayuchakravarty/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon" style="font-size: 55px;"></span>
                                 </a>
                             </div>
@@ -83,7 +83,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobiri.se/">
+                                <a href="page5.html">
                                     <span class="mbr-iconfont mobi-mbri-layers mobi-mbri" style="font-size: 55px;"></span>
                                 </a>
                             </div>
@@ -96,8 +96,7 @@
     </div>
 
     
-</section>
-<section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/1525266" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with  &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/1525266" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Maker</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
