--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <link href="https://avatars.githubusercontent.com/u/36366120?s=400&u=50d7698b0048f69d9dad81e6dd9914cdef517ec0&v=4" 
         type="image/x-icon" rel="icon">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/> -->
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
         <meta name="theme-color" content="#000000"/>
         <meta property="og:description" content="Canvas of passion projects in code: s7chak"/>
         <link rel="manifest" href="/manifest.json"/>
