--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         <title>s7chak | Code Canvas</title>
         <script defer="defer" src="/static/js/main.202196e0.js"></script>
         <link href="/static/css/main.010e4fa7.css" rel="stylesheet"></head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJH64G2YP5"></script>
+        <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-KJH64G2YP5');</script>
         <body class="has-navbar-fixed-top"><noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body></html>
