--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,6 @@
         <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-KJH64G2YP5');</script>
         <body class="has-navbar-fixed-top"><noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-    </body></html>
+        <script type="module" src="../src/components/things/3dplay.tsx"></script>
+        </body>
+    </html>
