--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,17 @@
         <script defer="defer" src="/static/js/main.202196e0.js"></script>
         <link href="/static/css/main.010e4fa7.css" rel="stylesheet"></head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJH64G2YP5"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+        </script>
+        <script type="text/javascript">
+        (function(){
+            emailjs.init("YYQZE-GZHmh0jLEij");
+        })();
+        </script>
         <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-KJH64G2YP5');</script>
-        <body class="has-navbar-fixed-top"><noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+        <body><noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root">
+        </div>
         <script type="module" src="../src/components/things/3dplay.tsx"></script>
         </body>
     </html>
