--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,7 @@
         </script>
         <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-KJH64G2YP5');</script>
         <body><noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root">
-        </div>
+        <div id="root"></div>
         <script type="module" src="../src/components/things/3dplay.tsx"></script>
         </body>
     </html>
