--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#000000"/>
         <meta property="og:description" content="Canvas of passion projects in code: s7chak"/>
         <link rel="manifest" href="/manifest.json"/>
-        <title>s7chak | Code Canvas</title>
+        <title>scaiverse</title>
         <script defer="defer" src="/static/js/main.202196e0.js"></script>
         <link href="/static/css/main.010e4fa7.css" rel="stylesheet"></head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJH64G2YP5"></script>
