--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -8,11 +8,11 @@
   a lifelong journey of exploration and discovery.
 </p>
 <br /><br />
-<!-- <div className="scpost-img">
+<div className="scpost-img">
   <img
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/learner.jpg?raw=true"
   />
-</div> -->
+</div>
 <br /><br />
 <b>Curiosity is Paramount</b><br />
 Curiosity fuels our thirst for knowledge and drives us to explore the world
