--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -5,11 +5,11 @@
 </p>
 <p>This one makes a sequential sense if read from the bottom to top.</p>
 <br />
-<!-- <div className="scpost-img">
+<div className="scpost-img">
   <img
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true"
   />
-</div> -->
+</div>
 <br /><br />
 <ul>
   <br />
