blogs in order = 2

--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -8,9 +8,9 @@
   a lifelong journey of exploration and discovery.
 </p>
 <br /><br />
-<div className="scpost-img">
-  <img
-    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/learner.jpg?raw=true"
+<div className="scpost-img" style="display: flex;align-items: center;justify-content: center;">
+  <img style = "border-radius: 5px;"
+    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/learner.jpg?raw=true" alt="always learnin'"
   />
 </div>
 <br /><br />
