--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -5,9 +5,9 @@
 </p>
 <p>This one makes a sequential sense if read from the bottom to top.</p>
 <br />
-<div className="scpost-img">
-  <img
-    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true"
+<div className="scpost-img" style="display: flex;align-items: center;justify-content: center;">
+  <img style = "border-radius: 5px;"
+    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true" alt="level up"
   />
 </div>
 <br /><br />
