--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -33,7 +33,7 @@
 >
   <img
     style="border-radius: 5px"
-    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true"
+    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels-2.jpg?raw=true"
     alt="level up"
   />
 </div>
@@ -111,6 +111,18 @@ ChatGPT
   <br />
 </ul>
 <br />
+<br />
+<div
+  className="scpost-img"
+  style="display: flex; align-items: center; justify-content: center"
+>
+  <img
+    style="border-radius: 5px"
+    src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true"
+    alt="level up"
+  />
+</div>
+<br />
 <p>
   These levels of thinking are neither rigid nor mutually exclusive. People
   generally exhibit characteristics of multiple levels simultaneously or glide
@@ -127,18 +139,44 @@ ChatGPT
   community, and meaning, which are essential for psychological well-being and
   social cohesion. The higher ones, in this context, help see a bigger picture
   of humanity, reality and may bring their own flavors of wellbeing to the mind
-  thinking at these stages. While the transcendent and universal levels
-  represent profound states of consciousness and awareness, they should not be
-  pursued at the expense of neglecting the foundational levels that support our
-  basic needs, practical functioning, and connection to our immediate
-  communities and identities.
+  thinking at these stages.
 </p>
 <br />
-
+<p>
+  The common wisdom about Integral Theory's levels of thinking is the following:
+  While the transcendent and universal levels represent profound states of
+  consciousness and awareness, they should not be pursued at the expense of
+  neglecting the foundational levels that support our basic needs, practical
+  functioning, and connection to our immediate communities and identities.
+</p>
+<p>
+  My understanding so far has this opinion/confusion: As we progress through the
+  levels, and say one day we have a thought at the universal or eighth level, we
+  do not lose our ability to think at lower levels. Even if some people find it
+  amusing, intellectually orgasmic or life-affirmingly meaningful, the level
+  implies the "host" is aware of all previous levels and recognizes their unique
+  utility and contribution to their life.
+</p>
+<br />
 <p>
   The ability to navigate and integrate various levels of thinking is crucial
-  for a balanced and holistic perspective. Individuals who can appreciate and
-  draw upon the strengths of different levels are better equipped to navigate
-  the complexities of life and adapt to diverse situations.
+  for a balanced and holistic perspective, no doubt. Individuals who can
+  appreciate and draw upon the strengths of different levels are better equipped
+  to navigate the complexities of life and adapt to diverse situations. And so
+  if my definition of the higher levels with the intrinsic awareness and
+  acceptance of all that came before applies, we should be striving to think at
+  the higher levels and keep returning back to reality, or pragmatism when the
+  time calls.
 </p>
-<br />
+<br /><br /><br />
+<p>
+  <b>Reference</b>
+  <ul>
+      <li>
+          <a href="https://www.kenwilberfund.org/integral-theory/" target="_blank">Integral Theory</a>
+      </li>
+      <li>
+          <a href="https://www.buildingthelifeyouwant.com/blog/an-integral-theory-map" target="_blank">Article on Integral Theory</a>
+      </li>
+  </ul>
+</p>
