--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -1,5 +1,5 @@
 <br />
-<p>I love to learn.</p>
+<p><i>I love to learn and I simply would not stop.</i></p>
 <br />
 <p>
   It will be a true satisfaction at the end of this brief stint on a hurtling
@@ -12,7 +12,7 @@
   The information era of humans is in full swing - a land of attention
   economies, society-altering algorithms, a new synthetic intelligence and a
   barrage of information with needle-in-a-haystack chance of insights. Given
-  this and the fact that I engage in this rapidly accelerating field of data
+  this and the fact that I engage with this rapidly accelerating world in its microcosm of data
   science, I find it crucial to adopt lifelong learning in theory and in
   practice. The upsides range from avoiding cognitive decline, building career
   resilience, expanded perspective, improved decision-making, confidence and
