--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -1,4 +1,4 @@
-<p>We live in a society, a true rainbow of every shade of human being.</p>
+<p><i>We live in a society, a true rainbow of every shade of human being.</i></p>
 <br />
 <p>
   I read through Wilber's Integral Theory to find a potential way to categorize
@@ -20,10 +20,7 @@
 </p>
 <br />
 <p>
-  About these levels, they go up from basal instincts and thinking patterns to
-  more holistic, integrated, nuanced and possibly to a more conscious way of
-  thinking. Going up is not necessarily good and staying down is not bad, and
-  that's it for the disclaimers before we go through them one by one.
+  About these levels, they go up from basal instincts and thinking patterns to more holistic, integrated, nuanced and possibly to a more conscious way of thinking. Going up is not necessarily good and staying down is not bad, or so they say. And that's it for the disclaimers before we go through them one by one. The levels are written from bottom to top as they make sense in altitudes of not really consciousness, but - it is difficult to put in words, so I'll use what I have for now - possibly sophistication.
 </p>
 <br />
 <br />
@@ -42,10 +39,43 @@
 ChatGPT
 <ul>
   <li>
-    <b>Archaic:</b> This is the most fundamental level, where individuals
-    operate primarily on instinctual and survival-based behaviors. There is
-    little to no self-awareness or cognitive complexity at this stage, as the
-    focus is solely on meeting basic physiological needs.
+    <b>Transcendent:</b> Transcendent thinking represents the highest level of
+    human consciousness, characterized by mystical experiences, spiritual
+    awakening, and a sense of oneness with the universe. Individuals at this
+    level may experience a profound sense of interconnectedness with all
+    existence and a transcendence of the ego or individual self.
+  </li>
+  <br/>
+  <li>
+    <b>Universal:</b> Universal thinking transcends individual perspectives and
+    identities, embracing a sense of unity, compassion, and global
+    responsibility. Individuals at this level develop a deep sense of
+    interconnectedness with all beings and a commitment to the well-being of the
+    entire planet.
+  </li>
+  <br/>
+  ...
+  <br/>
+  <li>
+    <b>Pluralistic:</b> Pluralistic thinking embraces diversity, inclusivity,
+    and relativism. Individuals at this level recognize multiple perspectives
+    and the importance of social justice and equality. They acknowledge that
+    different cultures and worldviews can coexist and have validity within their
+    respective contexts.
+  </li>
+  <br/>
+  <li>
+    <b>Rational:</b> The rational level is characterized by logic, reason, and
+    critical analysis. Individuals at this stage prioritize empirical evidence
+    and scientific inquiry, relying on objective data and rational thought
+    processes to understand the world around them.
+  </li>
+  <br/>
+  <li>
+    <b>Mythical:</b> Mythical thinking involves adherence to traditional
+    cultural narratives, religious dogma, and moral absolutes. Individuals at
+    this level find a strong sense of community and belonging within the shared
+    beliefs and rituals of their culture or religion.
   </li>
   <br />
   <li>
@@ -57,28 +87,13 @@ ChatGPT
   </li>
   <br />
   <li>
-    <b>Mythical:</b> Mythical thinking involves adherence to traditional
-    cultural narratives, religious dogma, and moral absolutes. Individuals at
-    this level find a strong sense of community and belonging within the shared
-    beliefs and rituals of their culture or religion.
+    <b>Archaic:</b> This is the most fundamental level, where individuals
+    operate primarily on instinctual and survival-based behaviors. There is
+    little to no self-awareness or cognitive complexity at this stage, as the
+    focus is solely on meeting basic physiological needs.
   </li>
   <br />
-  <li>
-    <b>Rational:</b> The rational level is characterized by logic, reason, and
-    critical analysis. Individuals at this stage prioritize empirical evidence
-    and scientific inquiry, relying on objective data and rational thought
-    processes to understand the world around them.
-  </li>
-  <br />
-  <li>
-    <b>Pluralistic:</b> Pluralistic thinking embraces diversity, inclusivity,
-    and relativism. Individuals at this level recognize multiple perspectives
-    and the importance of social justice and equality. They acknowledge that
-    different cultures and worldviews can coexist and have validity within their
-    respective contexts.
-  </li>
-  <br />
-  <li>
+  <!-- <li>
     <b>Integral:</b> Integral thinking integrates and transcends previous
     levels, synthesizing diverse perspectives and embracing complexity, paradox,
     and interconnectivity. Individuals at this stage can hold multiple
@@ -92,23 +107,7 @@ ChatGPT
     interdependence of all life forms and phenomena, and they strive to
     understand the broader context and relationships within complex systems.
   </li>
-  <br />
-  <li>
-    <b>Universal:</b> Universal thinking transcends individual perspectives and
-    identities, embracing a sense of unity, compassion, and global
-    responsibility. Individuals at this level develop a deep sense of
-    interconnectedness with all beings and a commitment to the well-being of the
-    entire planet.
-  </li>
-  <br />
-  <li>
-    <b>Transcendent:</b> Transcendent thinking represents the highest level of
-    human consciousness, characterized by mystical experiences, spiritual
-    awakening, and a sense of oneness with the universe. Individuals at this
-    level may experience a profound sense of interconnectedness with all
-    existence and a transcendence of the ego or individual self.
-  </li>
-  <br />
+  <br /> -->
 </ul>
 <br />
 <br />
@@ -119,7 +118,7 @@ ChatGPT
   <img
     style="border-radius: 5px"
     src="https://github.com/s7chak/Blogage/blob/master/pix/scaiverse-blogs/levels.jpg?raw=true"
-    alt="level up"
+    alt="transcend"
   />
 </div>
 <br />
