--- a/public/blogs/Learners_Manifesto.html
+++ b/public/blogs/Learners_Manifesto.html
@@ -100,5 +100,8 @@ This fast world we have inherited is not going to slow down any time within our 
       <li>
           <a href="https://www2.deloitte.com/content/dam/Deloitte/mx/Documents/technology/Coming-of-age-digitally.pdf" target="_blank">Workplace learning culture</a>
       </li>
+      <li>
+        Images: Bing (Dall-e)
+      </li>
   </ul>
 </p>
