--- a/public/blogs/Levels_Thinking.html
+++ b/public/blogs/Levels_Thinking.html
@@ -177,5 +177,8 @@ ChatGPT
       <li>
           <a href="https://www.buildingthelifeyouwant.com/blog/an-integral-theory-map" target="_blank">Article on Integral Theory</a>
       </li>
+      <li>
+        Images: Bing (Dall-e)
+      </li>
   </ul>
 </p>
